still multiple problem, probably network related

--- a/deploy/kubernetes/manifests/19-rabbitmq-dep.yaml
+++ b/deploy/kubernetes/manifests/19-rabbitmq-dep.yaml
@@ -35,7 +35,7 @@ spec:
               - SETGID
               - SETUID
               - DAC_OVERRIDE
-          readOnlyRootFilesystem: true
+#          readOnlyRootFilesystem: true
       - name: rabbitmq-exporter
         image: kbudde/rabbitmq-exporter
         ports:
