--- a/deploy/kubernetes/manifests/23-shipping-dep.yaml
+++ b/deploy/kubernetes/manifests/23-shipping-dep.yaml
@@ -41,7 +41,7 @@ spec:
               - all
             add:
               - NET_BIND_SERVICE
-          readOnlyRootFilesystem: true
+#          readOnlyRootFilesystem: true
         volumeMounts:
         - mountPath: /tmp
           name: tmp-volume
