--- a/deploy/kubernetes/manifests/01-carts-dep.yaml
+++ b/deploy/kubernetes/manifests/01-carts-dep.yaml
@@ -39,7 +39,7 @@ spec:
               - all
             add:
               - NET_BIND_SERVICE
-          readOnlyRootFilesystem: true
+#          readOnlyRootFilesystem: true
         volumeMounts:
         - mountPath: /tmp
           name: tmp-volume
