--- a/deploy/kubernetes/manifests/03-carts-db-dep.yaml
+++ b/deploy/kubernetes/manifests/03-carts-db-dep.yaml
@@ -30,7 +30,7 @@ spec:
               - CHOWN
               - SETGID
               - SETUID
-          readOnlyRootFilesystem: true
+#          readOnlyRootFilesystem: true
         volumeMounts:
         - mountPath: /tmp
           name: tmp-volume
