--- a/deploy/kubernetes/manifests/05-catalogue-dep.yaml
+++ b/deploy/kubernetes/manifests/05-catalogue-dep.yaml
@@ -39,7 +39,7 @@ spec:
               - all
             add:
               - NET_BIND_SERVICE
-          readOnlyRootFilesystem: true
+#          readOnlyRootFilesystem: true
         livenessProbe:
           httpGet:
             path: /health
