--- a/deploy/kubernetes/manifests/25-user-dep.yaml
+++ b/deploy/kubernetes/manifests/25-user-dep.yaml
@@ -31,15 +31,15 @@ spec:
         env:
         - name: mongo
           value: user-db:27017
-        securityContext:
-          runAsNonRoot: true
-          runAsUser: 10001
-          capabilities:
-            drop:
-              - all
-            add:
-              - NET_BIND_SERVICE
-          readOnlyRootFilesystem: true
+#        securityContext:
+#          runAsNonRoot: true
+#          runAsUser: 10001
+#          capabilities:
+#            drop:
+#              - all
+#            add:
+#              - NET_BIND_SERVICE
+##          readOnlyRootFilesystem: true
         livenessProbe:
           httpGet:
             path: /health
