--- a/deploy/kubernetes/manifests/05-catalogue-dep.yaml
+++ b/deploy/kubernetes/manifests/05-catalogue-dep.yaml
@@ -34,11 +34,11 @@ spec:
         securityContext:
           runAsNonRoot: true
           runAsUser: 10001
-          capabilities:
-            drop:
-              - all
-            add:
-              - NET_BIND_SERVICE
+#          capabilities:
+#            drop:
+#              - all
+#            add:
+#              - NET_BIND_SERVICE
 #          readOnlyRootFilesystem: true
         livenessProbe:
           httpGet:
