--- a/deploy/kubernetes/manifests/00-sock-shop-ns.yaml
+++ b/deploy/kubernetes/manifests/00-sock-shop-ns.yaml
@@ -1,5 +1,5 @@
 ---
-#apiVersion: v1
-#kind: Namespace
-#metadata:
-#  name: sock-shop
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: sock-shop
