--- a/deploy/kubernetes/manifests-monitoring/04-prometheus-configmap.yaml
+++ b/deploy/kubernetes/manifests-monitoring/04-prometheus-configmap.yaml
@@ -167,3 +167,7 @@ data:
       static_configs:
         - targets: ['demo-app-service.demo-app.svc:80']
       metrics_path: /actuator/prometheus
+    - job_name: 'themis-executor'
+      static_configs:
+        - targets: ['themis-executor-service.themis-executor.svc:80']
+      metrics_path: /actuator/prometheus
